# sleigher

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix  test_irisc_sha256.sh
examples/: risc.slaspec  vliw.slaspec
src/: assembler.rs  bitconstraint.rs  constructor.rs  disassembler.rs  emulator.rs  execution.rs  lib.rs  pattern.rs  sleigh.rs  space.rs  table.rs  token.rs  value.rs
